@@ -1,3 +1,4 @@
+* Raise NotImplementedError when setting Function field without setter
 * Add exports in view_toolbar_get
 * Add resources method to ModelStorage
 * Validate selection format in Dict schema
